--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -4,4 +4,9 @@
     >Sistema para exemplificar a construcao de um cadastro em
     angular</mat-card-subtitle
   >
+  
+  <ul>
+    <li *myFor="let n em: [1, 2, 3]">{{ n }}</li>
+  </ul>
+
 </mat-card>
